# Robo-team

./: Dockerfile  LICENSE  README.md  instructions_git.txt  start_docker.txt
catkin_ws/: frames.gv
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin
catkin_ws/devel/.private/book/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/book/lib/pkgconfig/: book.pc
catkin_ws/devel/.private/book/share/book/cmake/: bookConfig.cmake
catkin_ws/devel/.private/diff_wheeled_robot_control/: .catkin  .rosinstall
catkin_ws/devel/.private/diff_wheeled_robot_control/lib/pkgconfig/: diff_wheeled_robot_control.pc
catkin_ws/devel/.private/diff_wheeled_robot_control/share/diff_wheeled_robot_control/cmake/: diff_wheeled_robot_controlConfig.cmake
catkin_ws/devel/.private/diff_wheeled_robot_gazebo/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/.private/diff_wheeled_robot_gazebo/lib/pkgconfig/: diff_wheeled_robot_gazebo.pc
catkin_ws/devel/.private/diff_wheeled_robot_gazebo/share/diff_wheeled_robot_gazebo/cmake/: diff_wheeled_robot_gazeboConfig.cmake
catkin_ws/devel/.private/mastering_ros_robot_description_pkg/: local_setup.fish  setup.sh
catkin_ws/devel/.private/mastering_ros_robot_description_pkg/lib/pkgconfig/: mastering_ros_robot_description_pkg.pc
catkin_ws/devel/.private/my_robot/: .catkin  local_setup.fish  setup.fish  setup.sh
catkin_ws/devel/.private/my_robot/include/my_robot/: message.h
catkin_ws/devel/.private/my_robot/lib/pkgconfig/: my_robot.pc
catkin_ws/devel/.private/my_robot/share/my_robot/cmake/: my_robot-msg-extras.cmake  my_robot-msg-paths.cmake  (+1 more)
catkin_ws/devel/.private/sensors/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/devel/.private/sensors/lib/pkgconfig/: sensors.pc
catkin_ws/devel/include/my_robot/: message.h
catkin_ws/devel/lib/pkgconfig/: book.pc  diff_wheeled_robot_control.pc  diff_wheeled_robot_gazebo.pc  mastering_ros_robot_description_pkg.pc  my_robot.pc  sensors.pc
catkin_ws/devel/lib/python3/dist-packages/my_robot/: __init__.py
catkin_ws/devel/share/book/cmake/: bookConfig-version.cmake  bookConfig.cmake
catkin_ws/devel/share/diff_wheeled_robot_control/cmake/: diff_wheeled_robot_controlConfig-version.cmake  diff_wheeled_robot_controlConfig.cmake
catkin_ws/devel/share/diff_wheeled_robot_gazebo/cmake/: diff_wheeled_robot_gazeboConfig-version.cmake  diff_wheeled_robot_gazeboConfig.cmake
catkin_ws/devel/share/gennodejs/ros/my_robot/: _index.js
catkin_ws/devel/share/mastering_ros_robot_description_pkg/cmake/: mastering_ros_robot_description_pkgConfig-version.cmake  mastering_ros_robot_description_pkgConfig.cmake
catkin_ws/devel/share/my_robot/cmake/: my_robot-msg-extras.cmake  my_robot-msg-paths.cmake  my_robotConfig-version.cmake  my_robotConfig.cmake
catkin_ws/devel/share/roseus/ros/my_robot/: manifest.l
catkin_ws/devel/share/sensors/cmake/: sensorsConfig-version.cmake  sensorsConfig.cmake
catkin_ws/logs/diff_wheeled_robot_control/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
catkin_ws/logs/mastering_ros_robot_description_pkg/: build.check.003.log.stderr
catkin_ws/logs/my_robot/: build.check.001.log.stderr  build.check.002.log.stderr
catkin_ws/myr/: CMakeLists.txt  package.xml
catkin_ws/src/book/: CMakeLists.txt
catkin_ws/src/dif_robot/: CMakeLists.txt  package.xml
catkin_ws/src/dif_robot/launch/: display.launch  gazebo.launch
catkin_ws/src/dif_robot/scripts/: a_star_planner.py  d_star_planner.py  rrt_planner.py
catkin_ws/src/dif_robot/urdf/: dif_r.xacro
catkin_ws/src/diff_wheeled_robot_control/: CMakeLists.txt  package.xml
catkin_ws/src/diff_wheeled_robot_gazebo/launch/: diff_wheeled_gazebo.launch  diff_wheeled_gazebo_full.launch
catkin_ws/src/mastering_ros_robot_description_pkg/launch/: gazebo.launch  view_mobile_robot.launch
catkin_ws/src/mastering_ros_robot_description_pkg/scripts/: a_star_planner.py
catkin_ws/src/mastering_ros_robot_description_pkg/src/: scan_listner.py
catkin_ws/src/mastering_ros_robot_description_pkg/urdf/: dif_r.xacro  diff_wheeled_robot.xacro  mob_rob.xacro  wheel.urdf.xacro  wheel.xacro
catkin_ws/src/mastering_ros_robot_description_pkg/worlds/: world.world
catkin_ws/src/my_robot/: CMakeLists.txt  package.xml  robot.rviz
catkin_ws/src/my_robot/config/: robot.rviz
catkin_ws/src/my_robot/launch/: display.launch  gezebo.launch  ln.launch  robot.rviz  simple_robot.urdf  test.launch  urdf.rviz  view_mobile_robot.launch  world.launch
catkin_ws/src/my_robot/scripts/: a_star_planner.py  publisher_node.py
catkin_ws/src/my_robot/src/: a_star_planner.py  navigator.py  subscriber_node.py
catkin_ws/src/my_robot/urdf/: dif_robot.xacro  mob_rob.urdf  mob_rob.xacro  simple_robot.urdf  test.urdf  wheel.xacro
catkin_ws/src/my_robot/urdf_ex/: camera.xacro  common_macro.xacro  control_block.xacro  corpus.xacro  main.xacro  wheel.xacro
catkin_ws/src/my_robot/worlds/: world.world
docker/: Dockerfile  build_docker.sh  exec_docker.sh  run_docker.sh
mobile_robot_base_ros1/: CMakeLists.txt  README.md  package.xml
mobile_robot_base_ros1/.devcontainer/: devcontainer.json
mobile_robot_base_ros1/config/: pid_params.yaml  robot_joint_state.yaml
mobile_robot_base_ros1/docker/: Dockerfile  docker-compose.yml
mobile_robot_base_ros1/docs/: Ru.md
mobile_robot_base_ros1/launch/: gazebo.launch  robot_base.launch  rviz.launch
mobile_robot_base_ros1/models/map_ground/: model.config  model.sdf
mobile_robot_base_ros1/models/map_ground/materials/scripts/: map_ground.material
mobile_robot_base_ros1/rviz/: base.rviz
mobile_robot_base_ros1/scripts/: control_gui.py
mobile_robot_base_ros1/src/: simple_controller.cpp
mobile_robot_base_ros1/urdf/: camera.xacro  common_macro.xacro  control_block.xacro  corpus.xacro  main.xacro  wheel.xacro
mobile_robot_base_ros1/world/: empty_world.world
(+19 files in other folders)
